feat: Homepage UI improvements (split login/signup, remove show all for unauthenticated) (#37)

--- a/rubyllm_chat_app/app/views/chat_cards/index.html.erb
+++ b/rubyllm_chat_app/app/views/chat_cards/index.html.erb
@@ -12,8 +12,8 @@
         <%= link_to "Show ALL chats", root_path(show_all: true), class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded" %>
       <% end %>
     <% else %>
-      <%= link_to "Log In", new_user_session_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
-      <%= link_to "Sign Up", new_user_registration_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded ml-2" %>
+      <%= link_to "🔑 Log In", new_user_session_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+      <%= link_to "✨ Sign Up", new_user_registration_path, class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded ml-2" %>
     <% end %>
   </div>
   <div class="flex justify-center">
