--- a/rubyllm_chat_app/app/views/layouts/_header.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/_header.html.erb
@@ -16,8 +16,8 @@
         <%= link_to "Edit Profile", edit_user_registration_path, class: "text-blue-400 hover:underline text-sm" %>
         <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: "bg-red-600 hover:bg-red-700 text-white font-bold py-1 px-3 rounded text-sm" %>
       <% else %>
-        <%= link_to "Sign Up", new_user_registration_path, class: "text-blue-400 hover:underline text-sm" %>
-        <%= link_to "Sign In", new_user_session_path, class: "text-blue-400 hover:underline text-sm" %>
+        <%= link_to "✨ Sign Up", new_user_registration_path, class: "text-blue-400 hover:underline text-sm" %>
+        <%= link_to "🔑 Sign In", new_user_session_path, class: "text-blue-400 hover:underline text-sm" %>
       <% end %>
     </div>
   </div>
