--- a/rubyllm_chat_app/app/views/chat_cards/index.html.erb
+++ b/rubyllm_chat_app/app/views/chat_cards/index.html.erb
@@ -27,7 +27,7 @@
                 <div class="font-bold text-xl mb-2 text-white"><%= chat.public ? "👀 " : "" %><%= chat.title %></div>
               </div>
               <% if chat.public %>
-                <div class="absolute bottom-0 right-0 px-2 py-1 bg-black bg-opacity-50 text-white text-xs rounded-tl-lg">
+                <div class="absolute top-0 right-0 px-2 py-1 bg-black bg-opacity-50 text-white text-xs rounded-bl-lg">
                   Public
                 </div>
               <% end %>
@@ -36,7 +36,7 @@
                 <div class="font-bold text-xl mb-2"><%= chat.public ? "👀 " : "" %><%= chat.title %></div>
               </div>
               <% if chat.public %>
-                <div class="absolute bottom-0 right-0 px-2 py-1 bg-black bg-opacity-50 text-white text-xs rounded-tl-lg">
+                <div class="absolute top-0 right-0 px-2 py-1 bg-black bg-opacity-50 text-white text-xs rounded-bl-lg">
                   Public
                 </div>
               <% end %>
