--- a/rubyllm_chat_app/app/views/chats/show.html.erb
+++ b/rubyllm_chat_app/app/views/chats/show.html.erb
@@ -2,7 +2,7 @@
 <div class="flex h-[calc(100vh-150px)] border border-gray-700 rounded-lg bg-gray-800 shadow-md overflow-hidden chat-sidebar-container" data-controller="chat-sidebar">
 
   <%# Left Pane: Chat List Sidebar %>
-  <div id="chats-list" class="hidden md:block w-full md:w-1/4 border-r border-gray-700 overflow-y-auto p-4 bg-gray-800" data-chat-sidebar-target="sidebar">
+  <div id="chats-list" class="chat-sidebar w-full md:w-1/4 border-r border-gray-700 overflow-y-auto p-4 bg-gray-800" data-chat-sidebar-target="sidebar">
     <h2 class="text-lg font-semibold mb-4 text-gray-200">My Chats 💬</h2>
 
     <%# Button/Form to create a new chat %>
@@ -26,7 +26,7 @@
   </div>
 
   <%# Right Pane: Chat Window %>
-  <div class="w-full md:w-3/4 flex flex-col">
+  <div class="chat-content w-full md:w-3/4 flex flex-col">
     <% if @chat %>
       <%# Mobile button to show chat list %>
       <div class="md:hidden p-2 bg-gray-800 border-b border-gray-700">
