--- a/rubyllm_chat_app/app/views/layouts/_header.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/_header.html.erb
@@ -1,31 +1,30 @@
 <header class="py-3 px-4 sm:px-6 lg:px-8 border-b border-gray-700 bg-gray-800">
-  <div class="flex flex-wrap container mx-auto justify-between items-center">
+  <div class="flex flex-wrap justify-between items-center">
     <h1 class="text-xl font-semibold text-gray-100">
       <%= link_to root_path, class: "text-gray-100 hover:underline" do %>
-        💨 Rails 8 Turbo Chat
+        💬 Rails 8 Turbo Chat
         <span role="img" aria-label="speech bubble">
           <%# = APP_VERSION %>
-          💬 (
+          (
           <%= Rails.env.development? ? 'dev' : (Rails.env.production? ? 'prod' : Rails.env) %>
           )
         </span>
       <% end %>
     </h1>
-    <div class="w-full flex items-center justify-between space-x-4 py-2">
+    <div class="max-md:w-full flex items-center justify-between space-x-4 py-2">
       <%= link_to "🏠", root_path, class: "text-blue-400 hover:underline text-sm" %>
-      <%= link_to "About", about_path, class: "text-blue-400 hover:underline text-sm" %>
-      <%= link_to "⚙️Config", config_path, class: "text-blue-400 hover:underline text-sm" %>
-      <%= link_to "🔌MCP", '/mcp/sse', class: "text-blue-400 hover:underline text-sm" %>
+      <%= link_to "❓ About", about_path, class: "whitespace-break-spaces text-blue-400 hover:underline text-sm" %>
+      <%= link_to "⚙️ Config", config_path, class: "whitespace-break-spaces text-blue-400 hover:underline text-sm" %>
+      <%= link_to "🔌 MCP", '/mcp/sse', class: "whitespace-break-spaces text-blue-400 hover:underline text-sm" %>
 
       <% if user_signed_in? %>
-        <%= link_to "Edit Profile", edit_user_registration_path, class: "text-blue-400 hover:underline text-sm" %>
+        <%= link_to "Edit Profile", edit_user_registration_path, class: "whitespace-break-spaces text-blue-400 hover:underline text-sm" %>
         <%= button_to destroy_user_session_path, method: :delete, class: "bg-red-600 hover:bg-red-700 text-white font-bold py-1 px-3 rounded text-sm" do %>
           <span class="hidden md:block">Sign out</span>
           <i class="ph ph-sign-out"></i>
         <% end %>
       <% else %>
-        <%= link_to "✨ Sign Up", new_user_registration_path, class: "text-blue-400 hover:underline text-sm" %>
-        <%= link_to "🔑 Sign In", new_user_session_path, class: "text-blue-400 hover:underline text-sm" %>
+        <%= link_to "✨ Sign Up", new_user_registration_path, class: "text-center whitespace-break-spaces text-blue-400 hover:underline text-sm" %>
       <% end %>
     </div>
   </div>
