display webconsole if WEB_CONSOLE=1

--- a/rubyllm_chat_app/app/views/layouts/_footer.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/_footer.html.erb
@@ -22,6 +22,6 @@
   </div>
 </footer>
 
-<% if Rails.env.development? && request.local? %>
+<% if Rails.env.development? && request.local? && ENV["WEB_CONSOLE"] == "1" %>
   <%= console %>
 <% end %>
