make the body takes the whole height

--- a/rubyllm_chat_app/app/views/layouts/application.html.erb
+++ b/rubyllm_chat_app/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
   <%= javascript_importmap_tags %>
 </head>
-<body class="bg-gray-900 text-gray-100 font-sans bg-gradient-to-br from-blue-900 to-purple-900 flex flex-col">
+<body class="h-dvh bg-gray-900 text-gray-100 font-sans bg-gradient-to-br from-blue-900 to-purple-900 flex flex-col">
   <%= render 'layouts/header' %>
 
   <% if Rails.configuration.x.config_errors.any? %>
