feat: Add GEMINI_API_KEY warning and improve helper

--- a/rubyllm_chat_app/app/views/pages/config.html.erb
+++ b/rubyllm_chat_app/app/views/pages/config.html.erb
@@ -21,7 +21,8 @@
     <%= display_env_variable("CLOUD_RUN_ENDPOINT_PROD", ENV["CLOUD_RUN_ENDPOINT_PROD"]) %>
     <%= display_env_variable("DATABASE_URL", obfuscate_database_url(ENV["DATABASE_URL"])) %>
     <%= display_env_variable("GCS_BUCKET", ENV["GCS_BUCKET"]) %>
-    <%= display_secret_env_variable("GCS_CREDENTIALS_JSON", ENV["GCS_CREDENTIALS_JSON"]) %>
+    <%= display_secret_env_variable("GEMINI_API_KEY", ENV["GEMINI_API_KEY"], json: false) %>
+    <%= display_secret_env_variable("GCS_CREDENTIALS_JSON", ENV["GCS_CREDENTIALS_JSON"], json: true) %>
 
 
     <%# --- RICC_ALLOWED_HOSTS --- %>
