--- a/rubyllm_chat_app/app/views/pages/about.html.erb
+++ b/rubyllm_chat_app/app/views/pages/about.html.erb
@@ -11,8 +11,12 @@
     and integrating with large language models.
   </p>
 
-  <p>
+  <p class="mb-4">
     Feel free to explore the code on <a href="https://github.com/palladius/rails8-turbo-chat" class="text-blue-400 hover:underline">GitHub</a>.
+  </p>
+
+  <p>
+    Thanks to Emiliano and Christian for their great contributions to the repo..
   </p>
 
   <div class="flex justify-center my-8">
